# discord-timezone-bot

./: .env_sample  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: bot.yml
bot/: Dockerfile  __init__.py  bot.py  main.py  scheduler.py  updater.py  utils.py
schedule/: pyproject.toml
